[stm32] add uartrelay [untested]

--- a/firmware/stm32/Makefile
+++ b/firmware/stm32/Makefile
@@ -16,6 +16,11 @@ WS2812_DMA16_HEADERS=ws2812_dma16/config.h ws2812_dma16/ws2812_dma16.h common/ws
 WS2812_DMA16_SRCS=ws2812_dma16/asm_routines.S ws2812_dma16/main.c common/ws2812_dma.c common/util.c $(STARTUP_SRC)
 WS2812_DMA16_FLAGS=-I ws2812_dma16
 
+UARTRELAY_ELF=uartrelay/uartrelay.elf
+UARTRELAY_HEADERS=uartrelay/config.h uartrelay/uartrelay.h common/ws2812_dma.h common/util.h common/m0delay.S common/fsm.h
+UARTRELAY_SRCS=uartrelay/main.c common/ws2812_dma.c common/util.c common/fsm.c $(STARTUP_SRC)
+UARTRELAY_FLAGS=-I uartrelay
+
 WS2801PAR_ELF=ws2801par/ws2801par.elf
 WS2801PAR_HEADERS=ws2801par/ws2801par.h common/util.h common/m0delay.S
 WS2801PAR_SRCS=ws2801par/ws2801par.c ws2801par/ws2801par_bitbang.S common/util.c $(STARTUP_SRC)
@@ -72,7 +77,8 @@ ELFS=                        \
 	$(RELAYBALL_ELF)         \
 	$(UARTBALL16_ELF)        \
 	$(WS2801PAR_ELF)         \
-	$(WS2812_DMA16_ELF)         \
+	$(WS2812_DMA16_ELF)      \
+	$(UARTRELAY_ELF)         \
 	$(JITTER_TIMER_ELF)      \
 	$(TIMING_EXPERIMENT_ELF)
 
@@ -123,6 +129,9 @@ $(WS2801PAR_ELF): $(WS2801PAR_SRCS) $(LINKER_SCRIPT_072) $(WS2801PAR_HEADERS)
 
 $(WS2812_DMA16_ELF): $(WS2812_DMA16_SRCS) $(LINKER_SCRIPT_030CC) $(WS2812_DMA16_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS_030CC) $(WS2812_DMA16_FLAGS) $(WS2812_DMA16_SRCS) -o $@
+
+$(UARTRELAY_ELF): $(UARTRELAY_SRCS) $(LINKER_SCRIPT_030CC) $(UARTRELAY_HEADERS)
+	$(GCC) $(CFLAGS) $(LDFLAGS) $(UARTRELAY_FLAGS) $(UARTRELAY_SRCS) -o $@
 
 $(JITTER_TIMER_ELF): $(JITTER_TIMER_SRCS) $(LINKER_SCRIPT) $(JITTER_TIMER_HEADERS)
 	$(GCC) $(CFLAGS) $(LDFLAGS) $(JITTER_TIMER_FLAGS) $(JITTER_TIMER_SRCS) -o $@
